--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 LABEL author=”Fredypinto180@gmail.com”
 COPY ./dist /usr/share/nginx/html
 EXPOSE 80 443
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
